assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Biryani:wght@200;300;400;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
* {
    color: white;
}
h1{
    font-family: 'Russo One', sans-serif;
    font-size: 64px;
    text-align: center;
    margin:0;
    letter-spacing: 3px;
}
h2{
    font-family: 'Montserrat', sans-serif;
    font-size: 32px;
    text-align: center;
    margin: 0;
    font-weight: 400;
}
p{
    font-family: 'Alegreya Sans', sans-serif;
    font-size: 16px;
    text-align: center;
    margin: 0;
}
li{
    cursor: pointer;
    font-family: 'Biryani', sans-serif;
    font-size: 16px;
    text-align: center;
    margin: 0;
    list-style: none;
}
.flexColumn {
    display: flex;
    flex-direction: column;
}
.flexNormal{
    display: flex;
}
.jccaic{
    justify-content: center;
    align-items: center;
}
.jcsbaic{
    justify-content: space-between;
    align-items: center;
}
.jcfsaic{
    justify-content: flex-start;
    align-items: center;
}
.jcsaaic{
    justify-content: space-around;
    align-items: center;
}
.hide{
    width: 0 !important;
}
.none{
    display: none !important;
}
.borderNone{
    border: none !important;
}
body{
    margin: 0;
    padding: 0;
    background-color: #353839;
    height: 100vh;
    width: 100vw;
}
.main{
    max-width: 100%;
}
header{
    height: 100vh;
    width: 80px;
    border-right: solid 1px #939A99;
    padding: 20px 0; 
    box-sizing: border-box;
}
header > * {
    user-select: none;
}
header > nav > ul{
    padding: 0;
    margin: 0;
    height: 30vh;
}
header > nav > ul > li{
    list-style: none;
    box-sizing: border-box;
}
header > nav > ul > li > a {
    box-sizing: border-box;
    width: 25px;
}
header > div {
    margin: 0;
    width: 250px;
    font-family: 'Biryani', sans-serif;
    font-size: 12px;
    transform: rotate(-90deg) translateX(50%);
}
#envelopSvg{
    width: 25px;
    height: 19px;
}
#linkedinSVG, #githubSVG{
    width: 25px;
    height: 25px;
}
.crossTransition{
    transition: all 0.2s ease-in-out;
    transform-origin: 50% 50%;
}
.crossRotate{
    transform: rotate(45deg) translate(7.5%, -7.5%);
}
.sideMenuHome, .sideMenuFolder{
    height: 100vh;
    width: 20vw;
    border-right: solid 2px #939A99;
    transition: all 0.5s ease-in-out;
    justify-content: center;
    overflow: hidden;
}
.sideMenuHome > ul, .sideMenuFolder > ul{
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 30px 0;
    padding: 10px 0;
    transition: all 0.5s ease-in-out;
}
.main{
    max-height: 100vh;
}
#content{
    margin: auto;
    box-sizing: border-box;
    height: 100vh;
}
.about{
    height: 100vh;
}
.rowTextAboutTitle{
    height: 60vh;
}
.textAbout{
    height: 40%;
}
.textAbout:last-child{
    width: 50vw;
}
.rowButton{
    gap: 20px;
    width: 100%;
    flex-wrap: wrap;
}
.rowButton > * {
    cursor: pointer;
    width: 250px;
    height: 80px;
    border: solid 2px #939A99;
    border-radius: 10px;
}
.formations{
    width: 60vw;
    min-height: 100vh;
    flex-wrap: wrap;
}
.formations > .card{
    width: 40%;
    height: 40vh;
    border: solid 1px #939A99;
    border-radius: 10px;
    box-shadow: 5px 5px 15px black;
    padding: 20px 0;
    gap: 20px;
}
.techAndComp{
    width: 70vw;
    min-height: 100vh;
    flex-wrap: wrap;
    overflow-y: auto;
    gap: 20px;
}
.technologiesBlock{
    width: 100%;
    gap: 50px;
}
.techno{
    width: 100%;
    flex-wrap: wrap;
}
.techno > div{
    width: 45%;
    padding: 10px;
    gap: 20px;
    justify-content: flex-end;
    align-items: center;
}
.techno > div > div{
    width: 70%;
    height: 10px;
    background-color: #939A99;
}
.barHTML > .fill{
    height: 100%;
    background-color: #fff;
    width: 60%;
}
.barJS > .fill{
    height: 100%;
    background-color: #fff;
    width: 60%;
}
.barCSS > .fill{
    height: 100%;
    background-color: #fff;
    width: 40%;
}
.otherComp{
    gap: 50px;
}
.language > p, .compDivers > p{
    text-align: start;
}
.language > ul, .compDivers > ul{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}
.language > ul > li, .compDivers > ul > li{
    cursor: default;
    text-align: start;
}
.project{
    padding: 10px;
    width: 60vw;
    flex-wrap: wrap;
    gap: 50px;
}
.project > .card > img{
    width: 320px;
    height: 180px;
    object-fit: cover;
}
.project > .card > p{
    text-align: center;
}
.modal{
    width: 100vw;
    height: 100vh;
    background-color: rgba(0,0,0,0.75);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 100000;
    display: flex;
    justify-content: space-between;
    padding: 50px 150px;
    box-sizing: border-box;
    flex-direction: column;
}
.firstModalRow{
    width: 100%;
    height: 40vh;
    display: flex;
    justify-content: center;
    align-items: flex-start;
}
.leftBlock{
    width: 80%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.leftBlock > .leftCol{
    width: 50%;
    height: 100%;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
}

.leftBlock > .leftCol > h2{
    width: 100%;
    height: 30%;
    text-align: start;
}
.leftBlock > .leftCol > img{
    width: 100%;
    height: auto;
    max-width: 432px;
    max-height: 243px;
}
.leftBlock > .rightCol{
    width: 50%;
    height: 100%;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
}
.leftBlock > .rightCol > p{
    width: 100%;
    height: 30%;
    text-align: end;
}
.rightBlock{
    width: 20%;
    height: 100%;
    display: flex;
    justify-content: flex-end;
    align-items: flex-start;
}
.rightBlock>p{
    font-family: 'Montserrat', sans-serif;
    font-size: 32px;
    text-align: center;
    margin: 0;
    font-weight: 400;
    cursor: pointer;
}
.secondModalRow{
    width: 100%;
    height: 60vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: flex-end;
    padding: 20px;
    box-sizing: border-box;
}
.descriptionProject {
    height: 60%;
    width: 100%;
    text-align: start;
}
.linkProject{
    height: 30%;
    width: 30%;
}
.contact{
    width: 60vw;
    height: 100vh;
}
.contact > p{
    font-family: 'Montserrat', sans-serif;
    font-size: 32px;
    text-align: center;
    margin: 0;
    font-weight: 400;
}
.form{
    width: 50vw;
    height: 30vh;
    box-sizing: border-box;
}
.form > textarea{
    height: 100%;
    width: 60%;
    resize: none;
    background: #939A99;
    padding: 0;
    border: none;
}
.form > .leftCol{
    height: 100%;
    width: 30%;
}
.form > .leftCol > input{
    width: 100%;
    height: 30px;
    background: #939A99;
    border: none;
}
.form > .leftCol > input:last-child:hover{
    color: red;
}
.form > .leftCol > input:focus-visible, .form > textarea:focus-visible {
    outline: none;
}
.form > .leftCol > input::placeholder, .form > textarea::placeholder {
    color: #fff;
    font-family: 'Biryani', sans-serif;
}
.rowContact{
    width: 100%;
    height: 30vh;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

@media screen and (max-width: 1024px) {
    h1{
        font-size: 28px;
    }
    h2{
        font-size: 20px;
    }
    p{
        font-size: 12px
    }
    .rowButton{
        width: 60vw;
    }
    #content{
        overflow: scroll;
    }
    .project{
        width: 50vw;
        justify-content: center;
    }
}
@media screen and (max-width: 512px){
    header{
        width: 50px;
        padding: 10px 0;
    }
    .sideMenuFolder, .sideMenuHome{
        width: 25vw;
    }
    h2{
        font-size: 12px;
    }
    li{
        font-size: 10px;
    }
    .contact > p{
        font-size: 12px;
    }
    .modal{
        padding: 50px;
    }
    .leftBlock{
        flex-direction: column;
    }
    .leftBlock >.leftCol, .leftBlock>.rightCol{
        width: 100%;
        gap: 10px;
    }
    .descriptionProject{
        overflow: scroll;
    }
    .leftBlock > .rightCol > p {
        text-align: center;
    }
    .leftBlock > .leftCol > h2{
        text-align: center;
    }
    .project > .card > img{
        max-width: 30vw;
    }
    .rowContact{
        flex-direction: column;
    }
    .form{
        gap: 5px;
        flex-direction: column-reverse;
    }
    .form > textarea{
        width: 100%;
    }
    .form > .leftCol{
        width: 100%;
        gap: 5px;
    }
    .form > .leftCol > input{
        box-sizing: border-box;
    }
    .otherComp{
        flex-direction: column;
    }
    .techno > div{
        width: 100%;
        gap: 5px;
        justify-content: space-between;
    }
    .technoFutur{
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
        height: 20vh;
    }
    .language > p, .compDivers > p{
        text-align: center;
    }
}

